config/k8s/authentication-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
        - name: authentication
          image: sithijasanthiya/lms-micro-authentication
---
#yaml congfiguration for the ClusterIp service
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
spec:
  selector:
    app: authentication
    #don't need to specify the type since ClusterIp is the default kubernetes service.
  ports:
    - name: authentication
      protocol: TCP
      port: 4001
      targetPort: 4001
