config/k8s/gateway-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: sithijasanthiya/lms-micro-gateway
          ports:
            - containerPort: 4000

---
#yaml congfiguration for the ClusterIp service
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
    #don't need to specify the type since ClusterIp is the default kubernetes service.
  ports:
    - name: gateway
      protocol: TCP
      port: 4000
      targetPort: 4000
