config/k8s/learner-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learner-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: learner
  template:
    metadata:
      labels:
        app: learner
    spec:
      containers:
        - name: learner
          image: sithijasanthiya/lms-micro-learner
---
#yaml congfiguration for the ClusterIp service
apiVersion: v1
kind: Service
metadata:
  name: learner-service
spec:
  selector:
    app: learner
    #don't need to specify the type since ClusterIp is the default kubernetes service.
  ports:
    - name: learner
      protocol: TCP
      port: 4002
      targetPort: 4002
