config/k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: sithijasanthiya/lms-payments
---
#yaml congfiguration for the ClusterIp service
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment
    #don't need to specify the type since ClusterIp is the default kubernetes service.
  ports:
    - name: payment
      protocol: TCP
      port: 4004
      targetPort: 4004
