config/k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: lms-app.dev
      http:
        paths:
          - path: /courses
            pathType: Prefix
            backend:
              service:
                name: course-service
                port:
                  number: 4003
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5173
